# QuantumDigitalTwinRS

./: .gitignore  Cargo.toml  README.md  cloudbuild.yaml  controller.py  docker-compose.yaml  pyproject.toml
.cargo/: config.toml
AeroQ/: README.md  config.yaml  pyproject.toml
AeroQ/baml_src/: aeroq.baml  clients.baml  main.baml
AeroQ/scripts/: osslbm_demo.py  smoke_kernel.py
AeroQ/src/aeroq/: __init__.py  kernel.py  llm.py  osslbm.py  qml_pinn.py  qsvt.py
AeroQ/tests/: test_kernel_routing.py  test_osslbm.py  test_qsvt_utils.py
app/: projects_lab.py  twin_lab.py
baml_client/: __init__.py  async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: clients.baml  main.baml  quantum.baml
docs/: AeroQ-OSSLBM-Demo.md  Business-Guide.md  Quantum-Resume-Portfolio.md  quantum-cloud-backends.md  sample-quantum-prompts.md
docs/prd/: AeroQ-Consolidated-PRD-v3.0.md  Post-Quantum-Crypto-Project-PRD.md  TwinSentry-Digital-Twin-PRD.md
docs/training/: Quantum-Engineering-Fundamentals.md  TwinSentry-Training-Guide.md  TwinSentry-Training-Overview.pptx  build_slides.py
python/pqc_readiness/: __init__.py  demo.py
python/twin_sentry/: __init__.py  controller.py  quantum_cloud.py  quantum_viz.py  sample_prompts.py
src/: bridge.rs  hamiltonian.rs  lib.rs  rk4.rs  simd_ops.rs  spsc.rs  state.rs  twin.rs
tests/: test_aeroq_kernel_e2e.py  test_controller_integration.py  test_pqc_readiness_demo.py  test_quantum_cloud.py  test_quantum_viz.py  test_sample_prompts.py
