[build-system]
requires = ["maturin>=1.4,<2"]
build-backend = "maturin"

[project]
name = "twinsentry-rs"
version = "0.1.0"
description = "TwinSentry-RS: BAML policy + Rust twin + Langfuse audit"
requires-python = ">=3.11"
dependencies = [
  "baml-py==0.208.5",
  "langfuse>=2.0",
  "numpy>=1.26",
  "plotly>=5.18",
  "streamlit>=1.31",
]

[project.optional-dependencies]
dev = ["maturin>=1.4,<2", "ruff>=0.4", "pytest>=8", "python-pptx>=1.0"]
# Gate-circuit submission (optional; see docs/quantum-cloud-backends.md)
quantum-cloud = ["qiskit>=1.0", "qiskit-aer>=0.14"]
ibm-quantum = ["qiskit>=1.0", "qiskit-aer>=0.14", "qiskit-ibm-runtime>=0.25"]

[tool.maturin]
features = ["python"]
module-name = "twin_sentry._native"
python-source = "python"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["baml_client"]

[tool.ruff.format]
exclude = ["baml_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
pythonpath = ["python"]

[tool.ruff.lint.per-file-ignores]
"app/twin_lab.py" = ["E402"]
